--- a/AplicacionFallabela/Servicio1/Servicio1.csproj
+++ b/AplicacionFallabela/Servicio1/Servicio1.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioCompania.cs" />
+    <Compile Include="ServicioProducto.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
